# c15-44-ft-python-react

./: .gitignore  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json
client/css/: style.css
client/pages/: perfil.html  register.html  trabajo.html
client/src/: App.jsx  index.css  main.js
client/src/components/header/: Header.jsx
client/src/components/header/headerComponents/: SelectLanguage.jsx
client/src/language/: language.js
client/src/pages/home/: Home.jsx
client/src/pages/home/homeComponents/ImgCarousel/: ImgCarousel.css  ImgCarousel.jsx
client/src/pages/login/: Login.jsx
client/src/store/: language.store.js
server/: Dockerfile  Dockerfile backup  alembic.ini  commands.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
server/migrations/: env.py
server/migrations/versions/: 46111f956fad_user_model_created.py  960ee28bcf5b_country_y_province_models.py  aceea3baef57_.py
server/src/: Dockerfile  config.py  db.py  main.py
server/src/api/: healthcheck.py
server/src/attendees/: api.py  crud.py
server/src/auth/: auth_config.py  dependencies.py  models.py  users.py
server/src/events/: api.py  crud.py  models.py  schemas.py
server/src/localizations/: api.py  apis.txt  crud.py  models.py  schemas.py
