[project]
name = ""
version = ""
description = ""
authors = [{ name = "no-country", email = "no-country@noname.com" }]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "sqlmodel>=0.0.12",
    "sqlalchemy>=2.0.23",
    "pydantic[dotenv]>=1.9.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
start = { shell = "cd src && uvicorn main:app --reload" }
lint = "pdm run ruff"
format = "pdm run black"
laf = { composite = ["lint src/", "format src/"] }
sort = "pdm run isort src"
pre-commit = { composite = ["laf", "sort"] }

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.3"]
lint = ["ruff>=0.1.6", "black>=23.11.0"]
imports = ["isort>=5.12.0"]
