[project]
name = ""
version = ""
description = ""
authors = [{ name = "no-country", email = "no-country@noname.com" }]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
    "sqlmodel>=0.0.12",
    "sqlalchemy>=2.0.23",
    "pydantic[dotenv]>=1.9.0",
    "psycopg[binary]>=3.1.13",
    "fastapi-users[sqlalchemy]>=12.1.2",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "setuptools>=69.0.2",
    "alembic>=1.12.1",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0.post2",
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm.scripts]
start.cmd = "uvicorn src.main:app --reload"
start.env = { PYTHONPATH = "./src" }
lint = "pdm run ruff"
format = "pdm run black"
laf = { composite = ["lint src/", "format src/"] }
sort = "pdm run isort src"
pre-commit = { composite = ["laf", "sort"] }
migrate.cmd = "alembic revision --autogenerate"
migrate.env = { PYTHONPATH = "./src" }
migrate-apply.cmd = "alembic upgrade head"
migrate-apply.env = { PYTHONPATH = "./src" }
migrate-revert.cmd = "alembic downgrade -1"
migrate-rever.env = { PYTHONPATH = "./src" }

[tool.pdm.dev-dependencies]
test = ["pytest>=7.4.3"]
lint = ["ruff>=0.1.6", "black>=23.11.0"]
imports = ["isort>=5.12.0"]
